user list with signals

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,7 @@
   <li><a [routerLink]="['effects']">Effects</a></li>
   <li><a [routerLink]="['effects-injector']">Effects Injector</a></li>
   <li><a [routerLink]="['global-service']">Global Service</a></li>
+  <li><a [routerLink]="['user-list']">User List</a></li>
 </ul>
 
 <form >
