--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
   <li><a [routerLink]="['effects-injector']">Effects Injector</a></li>
   <li><a [routerLink]="['global-service']">Global Service</a></li>
   <li><a [routerLink]="['user-list']">User List</a></li>
+  <li><a [routerLink]="['equality']">Equality</a></li>
 </ul>
 
 <form >
