--- a/src/app/components/08equality/equality.component.html
+++ b/src/app/components/08equality/equality.component.html
@@ -6,7 +6,7 @@
         <button type="button" (click)="setTo(2)">2</button>
         <button type="button" (click)="setTo(3)">3</button>
       </div>
-      <div>CountChangeOn3: {{countChangeOn3()}} 
+      <div>CountChangeOnEquality: {{countChangeOn3()}} 
         <button type="button" (click)="setEqTo(1)">1</button>
         <button type="button" (click)="setEqTo(2)">2</button>
         <button type="button" (click)="setEqTo(3)">3</button>
